fix nav bar alignment

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 .logo{
     font-size: 30px;
     float: left;
-    padding: 10px 0;
+    padding: 15px 0;
     color: black;
     text-decoration: none;
     font-weight: 600;
